--- a/home.css
+++ b/home.css
@@ -25,7 +25,8 @@ body{
 }
 
 .form-control{
-    border-radius: 20px;
+    height: 50px;
+    border-radius: 25px;
 }
 
 
@@ -50,6 +51,10 @@ body{
 .navbar-form button:hover {
     background-color: #2ecc71;
     color: white;
+}
+
+.navbar-form >.btn {
+    vertical-align: baseline;
 }
 
 .navbar-default {
@@ -82,6 +87,15 @@ h1 {
     color: white;
     margin: 0px;
     text-align: center;
-    display: table-cell;
-    vertical-align: middle;
+    position: relative;
+    top: 30vh;
+}
+
+form {
+    font-size: 40px;
+    color: white;
+    margin: 0px;
+    text-align: center;
+    position: relative;
+    top: 38vh;
 }
