--- a/home.css
+++ b/home.css
@@ -63,6 +63,10 @@ body{
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
 }
 
+.navbar {
+    margin-bottom: 0;
+}
+
 #box1 {
     height: 100vh;
     width: 100%;
@@ -76,7 +80,7 @@ body{
 #box2 {
     height: 100vh;
     width: 100%;
-    background-image: url(back2.jpg);
+    /*background-image: url(back2.jpg);*/
     background-size: cover;
     display: table;
     background-attachment: fixed;
