--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body{
 .progress-bar{
     display: inline-block;
     height:2px;
-    width:10px;
+    width:0px;
     background-color: white;
 }
 #circle-pointer{
@@ -145,10 +145,11 @@ body{
 }
 .volume-control{
     /*height:40px;*/
+    cursor: pointer;
     position: relative;
-    top:18px;
+    top:15px;
     margin-left:4vw;
-    font-size: 40px;
+    font-size: 30px;
     /*max-resolution: 1px;0px 10px 10px 10px;*/
 }
 
@@ -169,12 +170,18 @@ body{
     color:white;
     background-color: transparent;
     width: 80px;
+    transform: scale(1.5,1.3);
 }
 
 
 #play:active,#prev:active,#next:active,#pause:active{
     color:black;
 }
+
+#play:hover,#prev:hover,#next:hover,#pause:hover{
+    color:#455A64;
+}
+
 
 #shuloop{
     /*display: inline-block;*/
@@ -191,4 +198,38 @@ body{
     background-color: transparent;
     border:none;
     outline: 0;
+}
+.volume_container{
+    /*display: none;*/
+    position: absolute;
+    transform: rotate(-90%);
+    z-index:100000000000000;
+    top:-180px;
+    left:1177px;
+    border-radius: 10px 10px 10px 10px;
+    display:none;
+
+}
+.progress {
+    transform: rotate(-90deg);
+    width: 150px;
+    height: 8px;
+    /*display: inline-block;*/
+    position: relative;
+    z-index: 1000000;
+    top:100px;
+    left: -25px;
+    /* height: 100px; */
+}
+.prog2{
+    height:20px;
+    width:148px;
+    background-color: #2ecc71;
+}
+#time{
+    position: absolute;
+    z-index: 100000000;
+}
+#mute:hover,#unmute:hover .volume_container{
+    display: inline-block;
 }
