--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,9 @@ body{
     position: relative;
     top:15px;
 }
+
+/*//music player do not touch*/
+
 .title>.song-name{
     /*padding-top:10px;*/
     font-size:25px;
@@ -235,3 +238,175 @@ body{
 #mute:hover,#unmute:hover .volume_container{
     display: inline-block;
 }
+/*//music player do not touch*/
+
+/*favourites page css*/
+.holder {
+    height: 290px;
+    width: 290px;
+    margin: 70px 30px 20px 30px;
+    overflow: hidden;
+    padding: 0;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.holder:hover {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
+.main {
+    height: 290px;
+    width: 290px;
+    /*border: 3px solid black;*/
+    overflow: hidden;
+}
+.main img {
+    transition: all .5s ease-in-out;
+}
+.main:hover img{
+    transform: scale(1.3) rotate(20deg);
+}
+
+.blackFrame {
+    height: 290px;
+    width: 290px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .5s ease-in-out;
+    transition-delay: .3s;
+}
+.main:hover .blackFrame{
+    transform: translateY(-290px);
+}
+
+.text {
+    height: 100px;
+    width: 290px;
+    background-color: rgba(250,250,250, 1);
+    line-height: 50px;
+    text-align: center;
+    position: absolute;
+    top: 0px;
+    left: 290px;
+    transition: all .5s ease-in-out;
+    font-size: 16px;
+}
+.main:hover .text{
+    transition-delay: .5s;
+    transform: translateX(-290px);
+}
+
+.songName {
+    overflow: hidden;
+    font-size: 18px;
+    text-align: center;
+    height: 50px;
+    width: 290px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    line-height: 50px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+
+.playButton {
+    font-size: 70px;
+    text-align: center;
+    height: 50px;
+    width: 290px;
+    background-color: transparent;
+    color: white;
+    position: absolute;
+    top: 100px;
+    left: 290px;
+    transition: all .5s ease-in-out;
+    cursor: pointer;
+}
+
+.main:hover .playButton {
+    transition-delay: .5s;
+    transform: translateX(-290px);
+}
+
+.options {
+    font-size: 30px;
+    height: 50px;
+    width: 290px;
+    background-color: transparent;
+    position: absolute;
+    bottom: 50px;
+    left: 290px;
+    margin: 0 0 0 10px;
+    transition: all .5s ease-in-out;
+}
+
+.main:hover .options{
+    transition-delay: .5s;
+    transform: translateX(-290px);
+}
+
+/*favourites page css*/
+
+
+
+/*upload page css*/
+#dropBox {
+    width: 650px;
+    height: 400px;
+    border: 2px dashed black;
+    margin: auto;
+    margin-top:17vh;
+    position: relative;
+
+}
+
+#dropBox > h3 {
+    /*color: white;           */
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    left: 183px;
+
+}
+
+#cloud {
+    /*width: 35%;
+    display: block;
+    margin: 0 auto;*/
+    /*-webkit-filter: invert(1);
+    filter: invert(1);*/
+    max-height: 70%;
+    max-width: 70%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+#cloud:hover {
+    -webkit-animation-name: spaceboots;
+	-webkit-animation-duration: 0.8s;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+}
+
+@-webkit-keyframes spaceboots {
+	0% { -webkit-transform: translate(8px, 4px) rotate(0deg); }
+	10% { -webkit-transform: translate(-4px, -8px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-12px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 12px) rotate(0deg); }
+	40% { -webkit-transform: translate(4px, -4px) rotate(1deg); }
+	50% { -webkit-transform: translate(-4px, 9px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-12px, 4px) rotate(0deg); }
+	70% { -webkit-transform: translate(8px, 4px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-4px, -4px) rotate(1deg); }
+	90% { -webkit-transform: translate(8px, 8px) rotate(0deg); }
+	100% { -webkit-transform: translate(4px, -8px) rotate(-1deg); }
+}
+/*upload css*/
