--- a/public_static/css/index.css
+++ b/public_static/css/index.css
@@ -74,9 +74,23 @@ body{
     border-color: #BDBDBD;
 }
 
+.list-group-item.active:focus {
+    background-color: #BDBDBD;
+    border-color: #BDBDBD;
+}
+
 .list-group-item:first-child {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.list-group-item:last-child {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 #playedSong {
