--- a/public_static/css/dropdown.css
+++ b/public_static/css/dropdown.css
@@ -442,3 +442,18 @@ body{
 .dropdown button:focus{
     background-color: transparent;
 }
+
+#clearQueue {
+    text-align: center;
+    margin: 10px 0 14px 0;
+}
+
+#clearButton {
+    border-radius: 18px;
+    border: none;
+    background-color: #2ecc71;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 5px 12px;
+}
