--- a/public_static/css/index.css
+++ b/public_static/css/index.css
@@ -122,6 +122,7 @@ body{
     display: inline-block;
     position: relative;
     top:15px;
+    width: 280px;
 }
 
 /*//music player do not touch*/
@@ -196,7 +197,7 @@ body{
 }
 
 #play:hover,#prev:hover,#next:hover,#pause:hover{
-    color:#455A64;
+    color: lightgray;
 }
 
 
@@ -207,8 +208,10 @@ body{
     height:100px;
     width:280px;
     margin-left:25px;
+    color: lightgray;
     /*border:1px solid black;*/
 }
+
 #rep,#ran,#mute,#unmute{
     height:100px;
     width: 80px;
@@ -216,8 +219,12 @@ body{
     background-color: transparent;
     border:none;
     outline: 0;
-
 }
+
+#rep:hover,#ran:hover,#mute:hover,#unmute:hover{
+    color: white;
+}
+
 .volume_container{
     /*display: none;*/
     position: absolute;
@@ -453,7 +460,7 @@ body{
 
 #clearQueue {
     text-align: center;
-    margin: 10px 0 14px 0;
+    margin: 10px 0 7px 0;
 }
 
 #clearButton {
@@ -464,4 +471,22 @@ body{
     font-weight: bold;
     font-size: 16px;
     padding: 5px 12px;
+    outline: none;
+}
+
+hr.style17 {
+    width: 85%;
+	border-top: 1px solid #8c8b8b;
+	text-align: center;
+    font-size: 18px;
+}
+hr.style17:after {
+	content: '♬';
+	display: inline-block;
+	position: relative;
+	top: -14px;
+	padding: 0 10px;
+	background: #f0f0f0;
+	color: #8c8b8b;
+	font-size: 18px;
 }
