--- a/public_static/dropzone.css
+++ b/public_static/dropzone.css
@@ -386,3 +386,6 @@
         border-left: 6px solid transparent;
         border-right: 6px solid transparent;
         border-bottom: 6px solid #be2626; }
+.dropzone{
+    text-align: center;
+}
