--- a/public_static/css/playlist.css
+++ b/public_static/css/playlist.css
@@ -338,7 +338,14 @@ body{
 .holder .main img {
     transition: all .5s ease-in-out;
 }
+.albumHolder .main img {
+    transition: all .5s ease-in-out;
+}
 .holder .main:hover img{
+    transform: scale(1.3) rotate(20deg);
+}
+
+.albumHolder .main:hover img{
     transform: scale(1.3) rotate(20deg);
 }
 
@@ -349,8 +356,21 @@ body{
     transition: all .5s ease-in-out;
     transition-delay: .3s;
 }
+
+.albumHolder .blackFrame {
+    height: 350px;
+    width: 350px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .5s ease-in-out;
+    transition-delay: .3s;
+}
+
 .holder .main:hover .blackFrame{
-    transform: translateY(-290px);
+    transform: translateY(-350px);
+}
+
+.albumHolder .main:hover .blackFrame{
+    transform: translateY(-350px);
 }
 
 .holder .text {
@@ -398,7 +418,7 @@ body{
     left: 0px;
 }
 
-.playButton {
+.holder .playButton {
     font-size: 70px;
     text-align: center;
     height: 50px;
@@ -412,9 +432,28 @@ body{
     cursor: pointer;
 }
 
-.main:hover .playButton {
+.albumHolder .playButton {
+    font-size: 90px;
+    text-align: center;
+    height: 50px;
+    width: 350px;
+    background-color: transparent;
+    color: white;
+    position: absolute;
+    top: 100px;
+    left: 350px;
+    transition: all .5s ease-in-out;
+    cursor: pointer;
+}
+
+.holder .main:hover .playButton {
     transition-delay: .5s;
     transform: translateX(-290px);
+}
+
+.albumHolder .main:hover .playButton {
+    transition-delay: .5s;
+    transform: translateX(-350px);
 }
 
 .options {
@@ -551,4 +590,33 @@ hr.style17:after {
     left: 0px;
     margin: 0 auto;
     margin-top: 5%;
+}
+
+/*#playlist {
+    list-style: decimal inside;
+}*/
+
+#playlist .list-group-item {
+    /*display: list-item;*/
+    border-left: none;
+    border-right: none;
+}
+
+#playlist .list-group-item{
+    font-size: 14px;
+    padding-top: 0px;
+}
+
+#playlist .list-group-item:hover {
+    background-color: #efefef;
+}
+
+.playlist-drop {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.art {
+    color: gray;
 }
