--- a/public_static/css/index.css
+++ b/public_static/css/index.css
@@ -289,35 +289,79 @@ body{
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
+.albumHolder {
+    height: 350px;
+    width: 350px;
+    margin: 70px 30px 20px 30px;
+    overflow: hidden;
+    padding: 0;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.albumHolder:hover {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+}
+
 .holder:hover {
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
-.main {
+.holder .main {
     height: 290px;
     width: 290px;
     /*border: 3px solid black;*/
     overflow: hidden;
 }
-.main img {
+
+.albumHolder .main {
+    height: 350px;
+    width: 350px;
+    /*border: 3px solid black;*/
+    overflow: hidden;
+}
+
+.holder .main img {
     transition: all .5s ease-in-out;
 }
-.main:hover img{
+
+.albumHolder .main img {
+    transition: all .5s ease-in-out;
+}
+
+.holder .main:hover img{
     transform: scale(1.3) rotate(20deg);
 }
 
-.blackFrame {
+.albumHolder .main:hover img{
+    transform: scale(1.3) rotate(20deg);
+}
+
+.holder .blackFrame {
     height: 290px;
     width: 290px;
     background-color: rgba(0, 0, 0, 0.5);
     transition: all .5s ease-in-out;
     transition-delay: .3s;
 }
-.main:hover .blackFrame{
+
+.albumHolder .blackFrame {
+    height: 350px;
+    width: 350px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all .5s ease-in-out;
+    transition-delay: .3s;
+}
+
+.holder .main:hover .blackFrame{
     transform: translateY(-290px);
 }
 
-.text {
+.albumHolder .main:hover .blackFrame{
+    transform: translateY(-350px);
+}
+
+.holder .text {
     height: 100px;
     width: 290px;
     background-color: rgba(250,250,250, 1);
@@ -329,17 +373,31 @@ body{
     transition: all .5s ease-in-out;
     font-size: 16px;
 }
-.main:hover .text{
+.holder .main:hover .text{
     transition-delay: .5s;
     transform: translateX(-290px);
 }
 
-.songName {
+.holder .songName {
     overflow: hidden;
     font-size: 18px;
     text-align: center;
     height: 50px;
     width: 290px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    line-height: 50px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+
+.albumHolder .songName {
+    overflow: hidden;
+    font-size: 18px;
+    text-align: center;
+    height: 50px;
+    width: 350px;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     line-height: 50px;
@@ -367,6 +425,34 @@ body{
     transform: translateX(-290px);
 }
 
+.playlist {
+    font-size: 70px;
+    text-align: center;
+    height: 50px;
+    width: 290px;
+    background-color: transparent;
+    color: white;
+    position: absolute;
+    top: 30px;
+    left: 290px;
+    transition: all .5s ease-in-out;
+    cursor: pointer;
+}
+
+.albumHolder .playButton {
+    font-size: 90px;
+    text-align: center;
+    height: 50px;
+    width: 350px;
+    background-color: transparent;
+    color: white;
+    position: absolute;
+    top: 100px;
+    left: 350px;
+    transition: all .5s ease-in-out;
+    cursor: pointer;
+}
+
 .options {
     font-size: 30px;
     height: 50px;
@@ -377,6 +463,11 @@ body{
     left: 290px;
     margin: 0 0 0 10px;
     transition: all .5s ease-in-out;
+}
+
+.albumHolder .main:hover .playButton {
+    transition-delay: .5s;
+    transform: translateX(-350px);
 }
 
 .main:hover .options{
@@ -518,3 +609,28 @@ hr.style17:after {
     cursor: pointer;
 }
 /**/
+
+#playlist .list-group-item {
+    /*display: list-item;*/
+    border-left: none;
+    border-right: none;
+}
+
+#playlist .list-group-item{
+    font-size: 14px;
+    padding-top: 0px;
+}
+
+#playlist .list-group-item:hover {
+    background-color: #efefef;
+}
+
+.playlist-drop {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.art {
+    color: gray;
+}
