changes in queue

--- a/public_static/css/index.css
+++ b/public_static/css/index.css
@@ -762,3 +762,16 @@ box-shadow: none;
 }
 
 /*Extra styling ends*/
+
+/*Queue dropdown styling*/
+.dropdown-button {
+    background-color: transparent;
+    border: none;
+}
+
+.call_modal {
+    background-color: transparent;
+    border: none;
+    padding-right: 130px;
+    outline: none;
+}
