--- a/public_static/css/index.css
+++ b/public_static/css/index.css
@@ -775,3 +775,9 @@ box-shadow: none;
     padding-right: 130px;
     outline: none;
 }
+
+
+#playlist .songTitle:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
