--- a/public_static/css/home.css
+++ b/public_static/css/home.css
@@ -77,6 +77,11 @@ body{
     background-attachment: fixed;
 }
 
+#box1 #searchButton:hover {
+    background-color: #2ecc71;
+    color: white;
+}
+
 #box2 {
     height: 100vh;
     width: 100%;
